[package]
name = "images-to-telegraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.4"
rusqlite = { version = "0.28.0", features = ["bundled"] }
telegraph-rs = {git="https://github.com/heyyyoyy/telegraph-rs"}
